# isolation

./: .gitignore  MEMORY.md  README.md  aashto_compliance.md  analysis_calculations.md  calc_results.json  docker-compose.yml  start-backend.sh
.github/workflows/: dependency-audit.yml
archive/legacy-analysis/ibr-study/: meet_the_agents.html  (+1 more)
backend/: Dockerfile  conftest.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/routers/: __init__.py  analysis.py  comparison.py  models.py  results.py
backend/app/schemas/: __init__.py  model.py  results.py
backend/app/services/: __init__.py  solver.py  tfp_example.py
backend/tests/: conftest.py  test_api_analysis.py  test_api_models.py  test_schemas.py  test_solver.py  test_solver_unit.py  test_tfp_example.py
backend/tests/fixtures/: sample_model.json  sample_tfp_bearing.json
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: regenerate-three-span-diaphragms.mjs
frontend/src/: App.tsx  index.css
ibr-study/: ibr_seismic_isolation_report.html
ibr-study/models/: alt-a-ductile.json
ibr-study/results/: pushover_results.json
reports/: engineering_report.html  fixed-base-investigation-2026-03-02.md  technical_paper.html
scripts/: generate_office_models.py
tests/: integration_test.py  run_twenty_story.py  test_new_models.py  test_solver_hinges.py
(+148 files in other folders)
